@@ -3,7 +3,7 @@
 # added to libpqxx, using the Perl script "maketestam.pl" found in the tools
 # directory.
 
-INCLUDES=-I$(top_srcdir)/include ${POSTGRES_INCLUDE}
+INCLUDES=-I$(top_builddir)/include -I$(top_srcdir)/include ${POSTGRES_INCLUDE}
 CLEANFILES=pqxxlo.txt
 MAINTAINERCLEANFILES=Makefile.in
 
@@ -14,233 +14,233 @@ TESTS = test001 test002 test003 test004 test005 test006 test007 test008 test009 
 check_PROGRAMS = ${TESTS}
 
 test001_SOURCES = test001.cxx
-test001_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test001_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test002_SOURCES = test002.cxx
-test002_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test002_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test003_SOURCES = test003.cxx
-test003_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test003_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test004_SOURCES = test004.cxx
-test004_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test004_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test005_SOURCES = test005.cxx
-test005_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test005_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test006_SOURCES = test006.cxx
-test006_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test006_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test007_SOURCES = test007.cxx
-test007_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test007_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test008_SOURCES = test008.cxx
-test008_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test008_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test009_SOURCES = test009.cxx
-test009_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test009_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test010_SOURCES = test010.cxx
-test010_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test010_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test011_SOURCES = test011.cxx
-test011_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test011_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test012_SOURCES = test012.cxx
-test012_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test012_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test013_SOURCES = test013.cxx
-test013_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test013_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test014_SOURCES = test014.cxx
-test014_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test014_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test015_SOURCES = test015.cxx
-test015_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test015_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test016_SOURCES = test016.cxx
-test016_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test016_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test017_SOURCES = test017.cxx
-test017_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test017_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test018_SOURCES = test018.cxx
-test018_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test018_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test019_SOURCES = test019.cxx
-test019_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test019_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test020_SOURCES = test020.cxx
-test020_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test020_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test021_SOURCES = test021.cxx
-test021_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test021_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test022_SOURCES = test022.cxx
-test022_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test022_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test023_SOURCES = test023.cxx
-test023_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test023_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test024_SOURCES = test024.cxx
-test024_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test024_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test025_SOURCES = test025.cxx
-test025_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test025_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test026_SOURCES = test026.cxx
-test026_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test026_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test027_SOURCES = test027.cxx
-test027_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test027_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test028_SOURCES = test028.cxx
-test028_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test028_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test029_SOURCES = test029.cxx
-test029_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test029_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test030_SOURCES = test030.cxx
-test030_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test030_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test031_SOURCES = test031.cxx
-test031_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test031_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test032_SOURCES = test032.cxx
-test032_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test032_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test033_SOURCES = test033.cxx
-test033_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test033_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test034_SOURCES = test034.cxx
-test034_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test034_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test035_SOURCES = test035.cxx
-test035_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test035_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test036_SOURCES = test036.cxx
-test036_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test036_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test037_SOURCES = test037.cxx
-test037_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test037_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test038_SOURCES = test038.cxx
-test038_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test038_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test039_SOURCES = test039.cxx
-test039_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test039_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test040_SOURCES = test040.cxx
-test040_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test040_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test041_SOURCES = test041.cxx
-test041_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test041_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test042_SOURCES = test042.cxx
-test042_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test042_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test043_SOURCES = test043.cxx
-test043_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test043_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test044_SOURCES = test044.cxx
-test044_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test044_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test045_SOURCES = test045.cxx
-test045_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test045_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test046_SOURCES = test046.cxx
-test046_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test046_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test047_SOURCES = test047.cxx
-test047_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test047_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test048_SOURCES = test048.cxx
-test048_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test048_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test049_SOURCES = test049.cxx
-test049_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test049_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test050_SOURCES = test050.cxx
-test050_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test050_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test051_SOURCES = test051.cxx
-test051_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test051_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test052_SOURCES = test052.cxx
-test052_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test052_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test053_SOURCES = test053.cxx
-test053_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test053_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test054_SOURCES = test054.cxx
-test054_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test054_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test055_SOURCES = test055.cxx
-test055_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test055_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test056_SOURCES = test056.cxx
-test056_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test056_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test057_SOURCES = test057.cxx
-test057_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test057_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test058_SOURCES = test058.cxx
-test058_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test058_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test059_SOURCES = test059.cxx
-test059_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test059_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test060_SOURCES = test060.cxx
-test060_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test060_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test061_SOURCES = test061.cxx
-test061_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test061_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test062_SOURCES = test062.cxx
-test062_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test062_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test063_SOURCES = test063.cxx
-test063_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test063_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test064_SOURCES = test064.cxx
-test064_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test064_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test065_SOURCES = test065.cxx
-test065_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test065_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test066_SOURCES = test066.cxx
-test066_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test066_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test067_SOURCES = test067.cxx
-test067_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test067_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test068_SOURCES = test068.cxx
-test068_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test068_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test069_SOURCES = test069.cxx
-test069_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test069_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test070_SOURCES = test070.cxx
-test070_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test070_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test071_SOURCES = test071.cxx
-test071_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test071_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test072_SOURCES = test072.cxx
-test072_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test072_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test073_SOURCES = test073.cxx
-test073_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test073_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test074_SOURCES = test074.cxx
-test074_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test074_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test075_SOURCES = test075.cxx
-test075_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test075_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test076_SOURCES = test076.cxx
-test076_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test076_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
 test077_SOURCES = test077.cxx
-test077_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+test077_LDADD = $(top_builddir)/src/libpqxx.la ${POSTGRES_LIB}
 
