@@ -1,3 +1,9 @@
+2004-03-21  Roger Leigh <rleigh@debian.org>
+ test/Makefile.am, tools/maketestam.pl
+  - Correct includes and libs search paths.
+  - VPATH builds now work.
+ tools/Makefile.am
+  - Don't try to install pqxxbench and rmlo.
 2004-03-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/libconfig.h.in, include/pqxx/util.hxx, src/util.cxx:
   - Moved PQfreemem() and PQfreeNotify() calls out of header
